[package]
name = "rust-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "binary-search"
path = "src/binary_search.rs"

[[bin]]
name = "codeforces"
path = "src/codeforces1738B.rs"

[dependencies]
rand = "0.8"
